Added basic selenium functionality to take a screen shot from earthcam. Also added adguard as a chrome option for the webdriver.

--- a/jupyter_notebooks/0.0-jmk-playground.ipynb
+++ b/jupyter_notebooks/0.0-jmk-playground.ipynb
@@ -2,32 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-08T23:14:51.189842Z",
-     "start_time": "2020-05-08T23:14:48.705959Z"
-    }
-   },
+   "execution_count": 7,
    "outputs": [],
    "source": [
-    "import selenium\n",
+    "# Import libraries\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "\n",
     "import pandas as pd\n",
-    "from PIL import Image"
-   ]
+    "from PIL import Image\n",
+    "import io\n",
+    "import time\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-16-8027ef5ccb34>:3: DeprecationWarning: use options instead of chrome_options\n",
+      "  driver = webdriver.Chrome(chrome_options=options)\n"
+     ]
+    }
+   ],
+   "source": [
+    "options = webdriver.ChromeOptions()\n",
+    "options.add_extension('../extension_3_4_19_0.crx')\n",
+    "driver = webdriver.Chrome(chrome_options=options)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "driver.get('https://www.earthcam.com/usa/florida/miamiandthebeaches/?cam=miamibeach1')\n",
+    "image = driver.find_element_by_xpath(\"//div[@class='mapContainer']\").screenshot_as_png\n",
+    "imageStream = io.BytesIO(image)\n",
+    "im = Image.open(imageStream)\n",
+    "save_path = \"../data/test_1.png\"\n",
+    "im.save(save_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
    "source": [
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
