Made the logic for storing the screenshots and added timestamps to the png files that are generated.

--- a/jupyter_notebooks/0.0-jmk-playground.ipynb
+++ b/jupyter_notebooks/0.0-jmk-playground.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
-    "\n",
+    "from apscheduler.schedulers.blocking import BlockingScheduler\n",
     "import pandas as pd\n",
     "from PIL import Image\n",
     "import io\n",
-    "import time\n"
+    "import time\n",
+    "import datetime\n",
+    "import os\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -23,21 +25,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
+   "outputs": [],
+   "source": [
+    "def initialize_browser():\n",
+    "    options = webdriver.ChromeOptions()\n",
+    "    options.add_extension('../extension_3_4_19_0.crx')\n",
+    "    chrome_driver = webdriver.Chrome(options=options)\n",
+    "    return chrome_driver\n",
+    "\n",
+    "def save_webcam_screenshot(driver, url_to_scrape):\n",
+    "    driver.get(url_to_scrape)\n",
+    "    time.sleep(10)\n",
+    "    image = driver.find_element_by_xpath(\"//div[@class='mapContainer']\").screenshot_as_png\n",
+    "    shot_time = datetime.datetime.now().replace(microsecond=0).isoformat()\n",
+    "    image_stream = io.BytesIO(image)\n",
+    "    im = Image.open(image_stream)\n",
+    "\n",
+    "    save_path = \"../data/\" + url_to_scrape.split('.com/')[1].split('?')[0][:-1] \\\n",
+    "                +\"_\" + shot_time + \".png\"\n",
+    "    save_directory = '/'.join(save_path.split(\"/\")[:-1])\n",
+    "    print(save_directory)\n",
+    "\n",
+    "    print(save_path)\n",
+    "    if not os.path.exists(save_directory):\n",
+    "       os.makedirs(save_directory)\n",
+    "\n",
+    "    #print(save_path)\n",
+    "    im.save(save_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ipython-input-16-8027ef5ccb34>:3: DeprecationWarning: use options instead of chrome_options\n",
-      "  driver = webdriver.Chrome(chrome_options=options)\n"
+      "../data/usa/georgia\n",
+      "../data/usa/georgia/athens_2020-05-08T23:32:25.png\n"
      ]
     }
    ],
    "source": [
-    "options = webdriver.ChromeOptions()\n",
-    "options.add_extension('../extension_3_4_19_0.crx')\n",
-    "driver = webdriver.Chrome(chrome_options=options)"
+    "driver = initialize_browser()\n",
+    "save_webcam_screenshot(driver, \"https://www.earthcam.com/usa/georgia/athens/?cam=athensga\")\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -48,16 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
-   "source": [
-    "driver.get('https://www.earthcam.com/usa/florida/miamiandthebeaches/?cam=miamibeach1')\n",
-    "image = driver.find_element_by_xpath(\"//div[@class='mapContainer']\").screenshot_as_png\n",
-    "imageStream = io.BytesIO(image)\n",
-    "im = Image.open(imageStream)\n",
-    "save_path = \"../data/test_1.png\"\n",
-    "im.save(save_path)"
+   "execution_count": 58,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi__\n"
+     ]
+    }
    ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
